--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,6 +23,18 @@
         <a href="https://linkedin.com/in/schneiderbenjamin/">LinkedIn</a>
     </div>
     <div class="wrapper">
+        <ul class="post-list">
+            {%- assign static_pages = site.pages | where_exp: "page", "page.layout == 'page' and page.url != '/' and page.title != null" -%}
+            {%- for page in static_pages -%}
+                <li class="post-item">
+                    <a class="post-link" href="{{ page.url | relative_url }}">{{ page.title }}</a>
+                    <br>
+                    <span class="post-excerpt">{% if page.excerpt %}{{ page.excerpt }}{% endif %}</span>
+                </li>
+            {%- endfor -%}
+        </ul>
+        </div>
+    <div class="wrapper">
         <h2><span class="heading-emoji">🏗️</span> Work</h2>
         {%- for project in site.data.projects -%}
         <div class="post-item">
