--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     {%- seo -%}
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preload"
+      as="style"
+      href="https://fonts.googleapis.com/css2?family=VT323&display=swap"
+      onload="this.onload=null;this.rel='stylesheet'">
+<noscript><link rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=VT323&display=swap"></noscript>
     <link rel="stylesheet" href="{{ '/assets/bschne.css' | relative_url }}" />
     {%- feed_meta -%} {%- if jekyll.environment == 'production' and
     site.google_analytics -%} {%- include google-analytics.html -%} {%- endif
